# Timer

./: .gitignore  CLAUDE.md  DEPENDENCIES.md  TODO.md  build-and-install.ps1  index.html  install-deps.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh
.github/workflows/: release-windows.yml
openspec/changes/archive/2026-02-06-tauri-app-scaffold/: design.md  proposal.md  tasks.md
openspec/changes/draggable-window/: design.md  proposal.md  tasks.md
openspec/changes/taskbar-flash-alarm/: design.md  proposal.md  tasks.md
openspec/specs/always-on-top/: spec.md
openspec/specs/completion-alert/: spec.md
openspec/specs/countdown-timer/: spec.md
openspec/specs/keyboard-shortcuts/: spec.md
openspec/specs/responsive-layout/: spec.md
openspec/specs/settings-persistence/: spec.md
openspec/specs/settings-view/: spec.md
openspec/specs/tauri-app-shell/: spec.md
openspec/specs/timer-commands/: spec.md
openspec/specs/timer-display/: spec.md
src/: App.svelte  DEPRECATED.md
src-tauri/: Cargo.toml  DEPRECATED.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  timer.rs
wails-app/: app.go  go.mod  main.go  wails.json  window_other.go  window_windows.go
wails-app/frontend/: package-lock.json  package.json  package.json.md5
wails-app/frontend/src/: App.svelte  ipc.ts  main.ts
wails-app/internal/settings/: settings.go  settings_test.go
wails-app/internal/timer/: timer.go  timer_test.go
(+41 files in other folders)
